# engiCs

./: .gitignore  .gitmodules  CMakeLists.txt  source.cmake  vcpkg.json
ecs/: CMakeLists.txt  ecs.cpp  rename-cppm-to-ixx.ps1  source.cmake
ecs/concurrency/: CMakeLists.txt
ecs/concurrency/container/: deque.cpp  deque.h
ecs/concurrency/container/riften/: deque.hpp
ecs/concurrency/erroe_code/: error_code.ixx
ecs/concurrency/event/: event.cpp  event.ixx
ecs/concurrency/future/: function_proxy.h  function_proxy.ixx
ecs/concurrency/run_loop/: event_loop.cpp  event_loop.h  event_loop.ixx  task.h  worker_loop.cpp  worker_loop.h  worker_loop.ixx
ecs/concurrency/threadpool/: Threadpool.cpp  Threadpool.ixx  threadpool.cpp  threadpool.h
ecs/concurrency/utils/: pause.cpp  pause.h  pause.ixx  processor_info.cpp  processor_info.h  processor_info.ixx
ecs/core/: CMakeLists.txt  error_code.cpp  error_code.h
ecs/core/config/: console_config.cpp  console_config.h  console_config.ixx
ecs/core/container/: concurrent_queue.h  hive.ixx
ecs/core/error_code/: error_code.ixx
ecs/core/exception/: assert.h  exception.cpp  exception.h  exception.ixx
ecs/core/log/: log.cpp  log.h  log.ixx  sqlite_sink.cpp  sqlite_sink.h  sqlite_sink.ixx
ecs/core/memory/: memory.cpp  memory.h  memory.ixx
ecs/core/string/: string.cpp  string.h
ecs/core/types/: class_def.h  class_def.ixx  t_string.h  t_string.ixx
ecs/core/utils/: emitter.h  emitter.ixx  function_traits.h  function_traits.ixx  single.h  single.ixx  sso_any.h  sso_any.ixx
ecs/game/: CMakeLists.txt
ecs/game/app/: app.cpp  app.ixx
ecs/game/context/: context.cpp  context.ixx
ecs/game/error_code/: error_code.ixx
ecs/game/render_window/: render_window.cpp  render_window.ixx
ecs/platform/: CMakeLists.txt  platform.h  platform.ixx
ecs/platform/error_code/: error_code.ixx
ecs/platform/event_loop/: event.ixx  event_loop.cpp  event_loop.ixx
ecs/platform/message_loop/: event.h  event_converter.h  message_loop.cpp  message_loop.h
ecs/platform/win32/: win32_platform.h  win32_platform.ixx
ecs/platform/win32/event_loop/: event_converter.cpp  event_converter.h  event_converter.ixx  event_loop.cpp  event_loop.ixx  message_loop.cpp  message_loop.h
ecs/platform/win32/window/: window.cpp  window.h  window.ixx
ecs/platform/window/: eventloop.cpp  eventloop.ixx  window.cpp  window.h  window.ixx
ecs/platform/window/win32/: win32_event_loop.cpp  win32_event_loop.ixx  win32_window.cpp  win32_window.ixx
ecs/resource/: CMakeLists.txt  actor.h  actor.ixx
ecs/rhi/: CMakeLists.txt  command_buffer.h  command_pool.h  context.h  defs.h  device.h  device.ixx  error_code.cpp  error_code.h  instance.h  pipeline.h  queue.h  queue.ixx  render_pass.cpp  render_pass.h  resource.h  shader.h  shader.ixx  surface.h  surface.ixx  swap_chain.h
ecs/rhi/vulkan/: allocator_callbacks.cpp  allocator_callbacks.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  config.cpp  config.h  config.ixx  context.cpp  context.h  defs.cpp  defs.h  device.cpp  device.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  resource.cpp  resource.h  shader.cpp  shader.h  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  vulkan.cpp  vulkan.h  vulkan_allocator.cpp  vulkan_allocator.ixx  vulkan_device.cpp  vulkan_device.ixx  vulkan_queue.cpp  vulkan_queue.ixx  vulkan_shader.cpp  (+1 more)
ecs/rhi/vulkan/utils/: format_size.cpp  format_size.h
ecs/test/: CMakeLists.txt  test_event_bind.cpp  test_event_source.cpp  test_threadpool.cpp
game/: CMakeLists.txt  ecs.cpp
game/app/: app.cpp  app.h
renderer/: CMakeLists.txt  renderer.cpp  renderer.h
test/: CMakeLists.txt  test_event_bind.cpp  test_event_source.cpp  test_threadpool.cpp
